# OCR_pipeline

./: .gitignore  Dockerfile  Readme.md  app.py  pyproject.toml  requirements.txt
ocr/: __init__.py  extract_text.py  ocr_pdf.py
scripts/: extract_text.py
static/: styles.css
templates/: index.html  result.html
